# OCL

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  benchmark.cpp  comprehensive_test.cpp  matmul.cpp  reduction.cpp  scan.cpp  vec_add.cpp
include/ocl/: Buffer.hpp  CommandQueue.hpp  Context.hpp  Device.hpp  Errors.hpp  Event.hpp  Image.hpp  Kernel.hpp  NDRange.hpp  Platform.hpp  Profiler.hpp  Program.hpp  Registry.hpp  ocl.hpp
kernels/: matmul_tiled.cl  reduction.cl  scan.cl  vector_add.cl
src/: Buffer.cpp  CommandQueue.cpp  Context.cpp  Device.cpp  Errors.cpp  Event.cpp  Kernel.cpp  NDRange.cpp  Platform.cpp  Profiler.cpp  Program.cpp  Registry.cpp
